--- a/Cecytek.csproj
+++ b/Cecytek.csproj
@@ -72,4 +72,8 @@
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\Recibos\" />
+    </ItemGroup>
+
 </Project>
