--- a/Cecytek.csproj
+++ b/Cecytek.csproj
@@ -73,6 +73,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Components\Pages\Facturas\" />
+      <Folder Include="Components\Pages\Reportes\" />
       <Folder Include="wwwroot\Recibos\" />
     </ItemGroup>
 
