--- a/Cecytek.csproj
+++ b/Cecytek.csproj
@@ -63,6 +63,7 @@
 
     <ItemGroup>
         <PackageReference Include="Blazor.Bootstrap" Version="1.10.5" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="8.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
@@ -70,6 +71,7 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
         <PackageReference Include="Npgsql" Version="8.0.1" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
+        <PackageReference Include="NPOI" Version="2.6.2" />
     </ItemGroup>
 
     <ItemGroup>
