--- a/Cecytek.csproj
+++ b/Cecytek.csproj
@@ -63,6 +63,7 @@
 
     <ItemGroup>
         <PackageReference Include="Blazor.Bootstrap" Version="1.10.5" />
+        <PackageReference Include="ClosedXML" Version="0.102.2" />
         <PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="8.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
